--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@ layout: default
               {{ post.summary }}
             {% else %}
               {{ post.excerpt }}
+              {% if post.excerpt != post.content %}
+                <a href="{{ site.baseurl }}{{ post.url }}">{{ site.excerpt_link }}</a><br />
+              {% endif %}
             {% endif %}
           </span>
         </div>
