--- a/guitar-tabs.html
+++ b/guitar-tabs.html
@@ -1,18 +1,17 @@
 ---
 layout: page
 title: Guitar Tabs
-footer: false
-body_id: archive
+permalink: /guitar-tabs/
 ---
 
 <div id="blog-archives">
-{% for post in site.pages_guitartabs['Guitar Tabs'] reverse %}
+{% for post in site.guitar-tabs %}
 {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
 {% unless year == this_year %}
   {% assign year = this_year %}
   <h2>{{ year }}</h2>
 {% endunless %}
-{% include post/variables.html %}
+{% include post_variables.html %}
 <article {% if linklog %}data-linklog{% endif %}>
   {% include archive_post.html %}
 </article>
